Major performance overhaul to fix N+1 Select problems and implement efficient pagination across the full stack. Query count per feed load reduced from ~35+ to ~3.
Backend Optimizations:
- Fixed N+1 Author Fetch: Added `JOIN FETCH` in PostRepository to load Post and Author in a single query.
- Fixed N+1 Enrichment: Implemented Batch Fetching (using `IN` clause) for `isLiked` and `isSaved` status instead of iterating loop checks.
- Entity Optimization: Added Hibernate `@Formula` to `Post` entity for `likeCount` and `commentCount` to calculate values in-DB without fetching full collection lists.
- Collection Safety: Added `@JsonIgnore` and `FetchType.LAZY` to Post relationships to prevent serialization-triggered fetching.
- Pagination: Updated all Repositories (Post, Comment, Notification, Report) and Services to use `Pageable` instead of fetching full lists.
- Refactoring: Replaced inefficient `findAll().size()` calls with direct `countBy...` DB queries.

Frontend Updates (Angular):
- Updated `PostService` to handle `page` and `size` parameters.
- Implemented "Load More" pagination logic in `Home` component.
- Optimized optimistic UI updates for Save/Like actions.

Fixes:
- Restored missing administrative methods in `UserService` (`banUser`, `deleteUser`).
- Fixed logic in `PostResponse` DTO to use count formulas instead of list sizes.