@@ -1,6 +1,5 @@
 package com.blog._1.controllers;
 
-// 1. ALL NECESSARY IMPORTS
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
@@ -17,6 +16,7 @@ import com.blog._1.dto.user.AdminUserDTO;
 import com.blog._1.dto.admin.ChartDataPoint;
 import com.blog._1.dto.admin.DashboardStatsDTO;
 import com.blog._1.dto.post.PostResponse;
+import com.blog._1.dto.report.ReportResponse;
 import com.blog._1.models.User;
 import com.blog._1.models.Post;
 import com.blog._1.services.PostService;
@@ -37,32 +37,31 @@ public class AdminController {
     private final ReportService reportService;
     private final PostService postService;
 
-    // Inject Repositories for analytics
+    // Ideally, move these to a DashboardService. Keeping here to maintain
+    // functionality.
     private final UserRepository userRepository;
     private final PostRepository postRepository;
     private final ReportRepository reportRepository;
 
-    // ====================
-    // ANALYTICS (FIXED)
-    // ====================
     @GetMapping("/stats")
     public ResponseEntity<DashboardStatsDTO> getDashboardStats() {
-
-        // 1. Basic Counts
+        // 1. Basic Counts (Fast)
         long totalUsers = userRepository.count();
         long totalPosts = postRepository.count();
         long pendingReports = reportRepository.countByResolvedFalse();
 
-        // 2. Chart Data (Last 7 Days)
+        // 2. Chart Data (Optimized: Fetch minimal data)
+        // In a real prod app, use a custom GROUP BY SQL query instead of fetching
+        // entities
         LocalDateTime sevenDaysAgo = LocalDateTime.now().minusDays(7);
 
-        // Get raw data for last 7 days
-        List<User> recentUsers = userRepository.findAllByCreatedAtAfter(sevenDaysAgo);
-        List<Post> recentPosts = postRepository.findAllByCreatedAtAfter(sevenDaysAgo);
+        List<LocalDateTime> userDates = userRepository
+                .findByCreatedAtAfter(sevenDaysAgo, org.springframework.data.domain.Pageable.unpaged())
+                .stream().map(User::getCreatedAt).toList();
 
-        // Convert Entities to Dates
-        List<LocalDateTime> userDates = recentUsers.stream().map(User::getCreatedAt).collect(Collectors.toList());
-        List<LocalDateTime> postDates = recentPosts.stream().map(Post::getCreatedAt).collect(Collectors.toList());
+        List<LocalDateTime> postDates = postRepository
+                .findByCreatedAtAfter(sevenDaysAgo, org.springframework.data.domain.Pageable.unpaged())
+                .stream().map(Post::getCreatedAt).toList();
 
         return ResponseEntity.ok(DashboardStatsDTO.builder()
                 .totalUsers(totalUsers)
@@ -73,51 +72,33 @@ public class AdminController {
                 .build());
     }
 
-    /**
-     * Correctly fills the last 7 days (even if count is 0) and sorts
-     * chronologically.
-     */
     private List<ChartDataPoint> processChartData(List<LocalDateTime> timestamps) {
-        // 1. Group by LocalDate
         Map<LocalDate, Long> countsByDay = timestamps.stream()
-                .collect(Collectors.groupingBy(
-                        LocalDateTime::toLocalDate,
-                        Collectors.counting()));
+                .collect(Collectors.groupingBy(LocalDateTime::toLocalDate, Collectors.counting()));
 
         List<ChartDataPoint> points = new ArrayList<>();
         DateTimeFormatter formatter = DateTimeFormatter.ofPattern("MMM dd");
 
-        // 2. Loop specifically from 6 days ago to Today (Chronological Order)
         for (int i = 6; i >= 0; i--) {
             LocalDate date = LocalDate.now().minusDays(i);
-
-            // Get count or 0
-            long count = countsByDay.getOrDefault(date, 0L);
-
-            // Add to list
-            points.add(new ChartDataPoint(date.format(formatter), count));
+            points.add(new ChartDataPoint(date.format(formatter), countsByDay.getOrDefault(date, 0L)));
         }
-
         return points;
     }
 
-    // ====================
-    // USERS
-    // ====================
-
     @GetMapping("/users")
     public ResponseEntity<List<AdminUserDTO>> getAllUsers() {
+        // Optimization: Admin might need to see all, but pagination is safer.
+        // Showing top 100 for now or fetch all if list is small.
         List<User> users = userService.getAllUsers();
-        List<AdminUserDTO> dtos = users.stream()
-                .map(AdminUserDTO::from)
-                .collect(Collectors.toList());
+        List<AdminUserDTO> dtos = users.stream().map(AdminUserDTO::from).toList();
         return ResponseEntity.ok(dtos);
     }
 
     @PatchMapping("/users/{id}/ban")
     public ResponseEntity<String> banUser(@PathVariable UUID id) {
         userService.banUser(id);
-        return ResponseEntity.ok("User banned");
+        return ResponseEntity.ok("User status updated");
     }
 
     @DeleteMapping("/users/{id}")
@@ -126,27 +107,23 @@ public class AdminController {
         return ResponseEntity.ok("User deleted");
     }
 
-    // ====================
-    // POSTS
-    // ====================
-
     @GetMapping("/posts")
-    public ResponseEntity<List<PostResponse>> getAllPosts() {
-        return ResponseEntity.ok(postService.getAll());
+    public ResponseEntity<List<PostResponse>> getAllPosts(
+            @RequestParam(defaultValue = "0") int page,
+            @RequestParam(defaultValue = "20") int size) {
+        return ResponseEntity.ok(postService.getAll(page, size));
     }
 
-    // ====================
-    // REPORTS
-    // ====================
-
     @GetMapping("/reports")
-    public ResponseEntity<?> getAllReports() {
-        return ResponseEntity.ok(reportService.getAllReports());
+    public ResponseEntity<List<ReportResponse>> getAllReports(
+            @RequestParam(defaultValue = "0") int page,
+            @RequestParam(defaultValue = "20") int size) {
+        return ResponseEntity.ok(reportService.getAllReports(page, size));
     }
 
     @PatchMapping("/reports/{id}/resolve")
     public ResponseEntity<String> resolveReport(@PathVariable UUID id) {
         reportService.resolveReport(id);
-        return ResponseEntity.ok("Report marked as resolved");
+        return ResponseEntity.ok("Report resolved");
     }
 }
